# verifundu

./: .gitignore  docker-compose.yml  index.html  manifest.json  pyproject.toml  sw.js  vercel.json
angola_domain/: logic.py
api/: main.py  routes.py  schemas.py
dashboard/: app.js  index.html  styles.css
db/: models.py
infra/: storage.py
pipeline/: orchestrator.py  tasks.py
