[project]
name = "verifundu"
version = "0.1.0"
description = "AI-powered fraud detection platform for Angolan bank receipts."
authors = [
    {name = "VeriFundu Team", email = "dev@verifundu.ao"}
]
dependencies = [
    "fastapi[all]>=0.110.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic[email]>=2.6.1",
    "pydantic-settings>=2.1.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "python-multipart>=0.0.9",
    "httpx>=0.26.0",
    "opencv-python-headless>=4.9.0.80",
    "paddleocr>=2.7.0",
    "ultralytics>=8.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "boto3>=1.34.0",
]

[tool.poetry]
name = "verifundu"
version = "0.1.0"
description = "AI-powered fraud detection platform for Angolan bank receipts."
authors = ["VeriFundu Team <dev@verifundu.ao>"]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
